--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.6.0",
     "@vue/compiler-sfc": "^3.0.5",
+    "node-sass": "^6.0.1",
+    "sass-loader": "^12.1.0",
     "vite": "^2.5.1"
   }
 }
